package fr.parisNanterre.iqPlay.models;

import fr.parisNanterre.iqPlay.models.interfaces.IUser;

public class User implements IUser {
    
}
